# rust_nomad_events_api

./: .gitignore  Cargo.toml  LICENSE  events.db
migrations/: 20240101000000_create_events_table.sql  20240101000001_create_events_table.sql
src/: main.rs
src/context/: analytics_context.rs  camping_profile_context.rs  event_context.rs  event_type_context.rs  microevent_context.rs  mod.rs  user_collection_context.rs  user_context.rs
src/custom_middleware/: api_key.rs  auth_middleware.rs  cors.rs  extractors.rs  jwt.rs  mod.rs  rate_limit.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: camping_handlers.rs  event_handlers.rs  mod.rs
src/logic/: camping_profile_logic.rs  event_logic.rs  event_type_logic.rs  microevent_logic.rs  mod.rs  user_collection_logic.rs  user_logic.rs
src/models/: analytics.rs  database_models.rs  dto.rs  event_models.rs  microevents_models.rs  mod.rs  user.rs
src/repositories/: camping_repository.rs  event_repository.rs  event_type_repository.rs  mod.rs
src/routes/: auth.rs  camping_profiles.rs  event_type.rs  events.rs  microevents.rs  mod.rs  profile.rs  user.rs  usercollection.rs
src/services/: camping_service.rs  event_service.rs  mod.rs
