[package]
name = "rust_nomad_events_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10.9"
jsonwebtoken = "9.3"
hex = "0.4.3"
dotenv = "0.15.0"
reqwest = {version = "0.12.26", features = ["json"] }
rand = "0.9.2"
anyhow = "1.0.100"
async-trait = "0.1"

[build]
[target.x86_64-unknown-linux-gnu]
